--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img class="card-img-top sms-img" src="image/send-messge.png" alt="send messege">
           <h2 class="heading">Free <span>SMS</span> Sender</h2>
           <hr class="mt-0 mb-0">
-          <div class="card-body">
+          <div class="card-body pb-0">
             <form id="smsForm">
               <div class="collapse" id="collapseExample">
                 <div class="form-group">
@@ -53,7 +53,7 @@
               </div>
             </form>
             <div style="text-align: center;">
-              <a href="#"><img style="height: 20px" src="https://img.icons8.com/ios-glyphs/30/000000/github.png" />
+              <a href="https://github.com/shs2001/sms" target="_blank"><img style="height: 20px" src="https://img.icons8.com/ios-glyphs/30/000000/github.png" />
                 <small>Open in Github</small></a>
             </div>
             <div class="result mt-3">
