--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6 mt-5">
-        <div class="card p-3">
+        <div class="card">
           <img class="card-img-top sms-img" src="image/send-messge.png" alt="send messege">
           <h2 class="heading">Free <span>SMS</span> Sender</h2>
           <hr class="mt-0 mb-0">
