--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-6 mt-5">
-        <div class="card">
+      <div class="col-md-6 m-2 m-lg-5">
+        <div class="card pt-2 pb-2">
           <img class="card-img-top sms-img" src="image/send-messge.png" alt="send messege">
           <h2 class="heading">Free <span>SMS</span> Sender</h2>
           <hr class="mt-0 mb-0">
@@ -52,13 +52,13 @@
                     class="d-block text-danger" id="lowbalance"></small></p>
               </div>
             </form>
-            <div style="text-align: center;">
-              <a href="https://github.com/shs2001/sms" target="_blank"><img style="height: 20px" src="https://img.icons8.com/ios-glyphs/30/000000/github.png" />
-                <small>Open in Github</small></a>
-            </div>
             <div class="result mt-3">
 
             </div>
+          </div>
+          <div style="text-align: center;">
+            <a href="https://github.com/shs2001/sms" target="_blank"><img style="height: 20px" src="https://img.icons8.com/ios-glyphs/30/000000/github.png" />
+              <small>Open in Github</small></a>
           </div>
         </div>
       </div>
