--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <div class="preloader"></div>
   <div class="container">
     <div class="row">
       <div class="col-md-3"></div>
