--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <small id="numberhelp" class="text-danger"></small>
               </div>
               <div class="form-group">
-                <textarea maxlength="160" class="form-control" id="msg" cols="30" rows="5"
+                <textarea maxlength="160" class="form-control" id="msg" cols="30" rows="3"
                   placeholder="Type your Messege...."></textarea>
                 <small id="msghelp" class="text-danger"></small>
               </div>
@@ -57,9 +57,12 @@
 
             </div>
           </div>
-          <div style="text-align: center;">
-            <a href="https://github.com/shs2001/sms" target="_blank"><img style="height: 20px" src="https://img.icons8.com/ios-glyphs/30/000000/github.png" />
+          <div class="d-flex justify-content-between p-2">
+            <a href="https://github.com/shs2001/sms" target="_blank"><img style="height: 20px" src="css/fontawesome-free-5.15.2-web/svgs/brands/github.svg" />
               <small>Open in Github</small></a>
+              
+            <a href="https://drive.google.com/file/d/1TyK-qjGneVawmSPaBhacnMbvTdo7pMJ5/view?usp=sharing" target="_blank"><img style="height: 20px" src="css/fontawesome-free-5.15.2-web/svgs/brands/android.svg" />
+              <small>Download App</small></a>
           </div>
         </div>
       </div>
