--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </div>
 
               <div class="form-group">
-                <input type="number" id="number" maxlength="11" class="form-control" placeholder="Phone Number">
+                <input type="number" id="number" value="01" maxlength="11" class="form-control" placeholder="Phone Number">
                 <small id="numberhelp" class="text-danger"></small>
               </div>
               <div class="form-group">
